Fix to top arrow on mobile

--- a/react-flask-app/src/App.css
+++ b/react-flask-app/src/App.css
@@ -454,16 +454,19 @@ hr {
   box-shadow: 0px 4px 4px var(--back-color);
   -moz-box-shadow: 0px 4px 4px var(--back-color);
   -webkit-box-shadow: 0px 4px 4px var(--back-color);
-  bottom: 45px;
-  left: 84%;
+  bottom: 30px;
+  right: 35px;
   font-size: 7rem;
+  background-image: url("./images/arrow.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
   background-color: var(--button-color);
   transition: all 0.2s ease-in;
   opacity: 1;
 }
 
 .to-top:hover {
-  bottom: 55px;
+  bottom: 40px;
   transition: all 0.2s ease-in;
   background-color: var(--font-color);
 }
